fixed infobox and top sep being the wrong color

--- a/styles/google/catppuccin.user.css
+++ b/styles/google/catppuccin.user.css
@@ -108,6 +108,13 @@
       border: 1px solid  @surface0 !important;
     }
 
+    .HsZQAe {
+      border-bottom: 1px solid  @surface0 !important;
+    }
+
+    .KLEmSd {
+      border-bottom: 1px solid  @surface0 !important;
+    }
 
     /* safe search toggle dropdown */
     .z4R3Z.yb2zA {
